Second activity, suppressed warning and fixed bugs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
+    <!---->
+    <string name="logoDescriptionID">Logo</string>
+    <!--Dashboard-->
     <string name="app_name">UpCode</string>
     <string name="addID">Add Goal</string>
     <string name="linkID">Connect Profile</string>
