Changes in project.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="linkProfileID">Link Profile</string>
     <string name="profileUrlID">None</string>
     <string name="backID">Go Back</string>
+    <string name="tagline">Even One line of code is a contribution</string>
+    <string name="imageContexLOGO">logo</string>
 </resources>
